style: prevent overflow

--- a/app/styles/components/code-preview.css
+++ b/app/styles/components/code-preview.css
@@ -29,6 +29,7 @@
   border-radius: inherit;
   border-top-left-radius: var(--radius-lg);
   border-bottom-left-radius: var(--radius-lg);
+  min-width: 0;
 
   .code-preview__title {
     color: var(--color-gray-100);
@@ -40,6 +41,7 @@
   background-color: var(--color-white);
   border-top-right-radius: var(--radius-lg);
   border-bottom-right-radius: var(--radius-lg);
+  min-width: 0;
 
   .code-preview__title {
     color: var(--color-gray-900);
